--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,9 @@
 .env.production.local
 .env.local
 
-# Fresh build directory
-_fresh/
 # npm dependencies
 node_modules/
 
 tweet_dates.json
+.hono/
+dist/
