feat: Use time adapter

--- a/deno.json
+++ b/deno.json
@@ -30,6 +30,7 @@
     "@hono/vite-build": "npm:@hono/vite-build@^1.1.0",
     "@hono/vite-dev-server": "npm:@hono/vite-dev-server@^0.16.0",
     "chart.js": "npm:chart.js@^4.4.5",
+    "chartjs-adapter-date-fns": "npm:chartjs-adapter-date-fns@^3.0.0",
     "hono": "npm:hono@^4.4.6",
     "honox": "npm:honox@^0.1.26",
     "vite": "npm:vite@^5.4.10"
